2006-06-09  Chris Heath <chris@heathens.co.nz>

	* e-plugin.c (ep_construct): Fix memory leak.
	Fixes bug #335423.

2006-06-08  Gary Coady  <garycoady@ubuntu.com>

	* e-i18n.h: Use the correct gettext domain for translations.
	Fixes bug #333003. (Committed by Andre Klapper)

2006-06-02  Tor Lillqvist  <tml@novell.com>

	* e-util.c: Don't need the Win32-only fix_percent_l() after all,
	this is taken care of in e_strftime(). (The check in e-d-s's
	configure.in for the support of %l and %k has now been made more
	reliable so it actually works also on Win32.)

2006-04-26  Li Yuan <li.yuan@sun.com>

	* e-text-event-processor-emacs-like.c:
	(e_text_event_processor_emacs_like_event):
	Handle SUN Type 6 keyboard's copy, paste and cut key.
	Fix #271661.

2006-03-27  Tor Lillqvist  <tml@novell.com>

	* e-util.c (fix_percent_l): [Win32] Instead of %l (which is a GNU
	extension not implemented in the Microsoft C library) use %I.
	Fixes #336055.
	(e_strftime_fix_am_pm): Call fix_percent_l() when necessary.

2006-02-12  Karsten Bräckelmann  <guenther@rudersport.de>

	* e-error.c (e_error_newv): 
	Removing unnecessary markup in translateable string.
	Fixes part of bug #272789.

2006-02-09  Harish Krishnaswamy  <kharish@novell.com>

	* e-bconf-map.c: Upstreaming Olaf Hering's patch
	to use signed chars. 

2006-02-08  Kjartan Maraas <kmaraas@gnome.org>

	* e-config.c: Use guint for 1-bit bitfield.
	* e-icon-factory.c: (load_icon): Remove unused var
	* e-import.c: (ep_init), (ep_finalise): Remove unused vars
	* e-plugin.c: (e_plugin_register_type): Rename a var
	* e-plugin.h: guint for 1-bit bitfield
	* e-popup.c: (ep_finalise): Add comment.
	* e-profile-event.c: Remove unused prototype
	* e-text-event-processor-emacs-like.c: 
	(e_text_event_processor_emacs_like_event): Add comment about
	a compiler warning from the Intel compiler.

2006-02-07  Benjamin Berg  <benjamin@sipsolutions.net>
	* e-gui-utils.c:
	* e-icon-factory.c:
	accept SVGs for stock icons. Fixes bug 304417.
